[project]
name = "yunhu"
version = "0.0.2"
authors = [
  { name="yunhu", email="1114110051@qq.com" },
]
description = "云湖官方Python SDK"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]